SUBDIRS = dynAny portable templates types util .

dist_noinst_HEADERS = \
   core.h \
   core_fw.h \
   core/AnyImpl.h \
   core/BidirectionalPolicyImpl.h \
   core/cdr/BufferCDR.h \
   core/cdr/CDR.h \
   core/cdr/CDRInputStream.h \
   core/cdr/CDROutputStream.h \
   core/cdr/ChunkCDR.h \
   core/cdr/ContextCDR.h \
   core/cdr/IndirectionNode.h \
   core/cdr/IteratorCDR.h \
   core/cdr/PointerCDR.h \
   core/cdr/PositionsNode.h \
   core/cdr/ValueTypeInfo.h \
   core/cdr.h \
   core/cdr_fw.h \
   core/CodecFactoryImpl.h \
   core/CodecImpl.h \
   core/comm/CommunicationLayer.h \
   core/comm/CommunicationManager.h \
   core/comm/Connection.h \
   core/comm/ConnectionManager.h \
   core/comm/ConnectionState.h \
   core/comm/ConnectionThread.h \
   core/comm/FragmentedMessageHolder.h \
   core/comm/FragmentedMessagesRepository.h \
   core/comm/FT/AlternateIIOPAddress.h \
   core/comm/FT/HeartbeatEnabled.h \
   core/comm/FT.h \
   core/comm/FT_fw.h \
   core/comm/HeartbeatThread.h \
   core/comm/iiop/AddressingDisposition.h \
   core/comm/iiop/BI_DIR_IIOP.h \
   core/comm/iiop/BiDirServiceContext.h \
   core/comm/iiop/Corbaloc.h \
   core/comm/iiop/GIOPCancelRequestMessage.h \
   core/comm/iiop/GIOPFragmentedMessage.h \
   core/comm/iiop/GIOPFragmentMessage.h \
   core/comm/iiop/GIOPHeader.h \
   core/comm/iiop/GIOPLocateReplyMessage.h \
   core/comm/iiop/GIOPLocateRequestMessage.h \
   core/comm/iiop/GIOPMessage.h \
   core/comm/iiop/GIOPReplyMessage.h \
   core/comm/iiop/GIOPRequestMessage.h \
   core/comm/iiop/IIOPCorbaloc.h \
   core/comm/iiop/InvocationPoliciesContext.h \
   core/comm/iiop/IORAddressingInfo.h \
   core/comm/iiop/ListenPoint.h \
   core/comm/iiop/LocateReplyStatusType.h \
   core/comm/iiop/MsgType.h \
   core/comm/iiop/ObjectKey.h \
   core/comm/iiop/ProfileIIOP.h \
   core/comm/iiop/ReplyStatusType.h \
   core/comm/iiop/RequestId.h \
   core/comm/iiop/ServiceContext.h \
   core/comm/iiop/ServiceContextList.h \
   core/comm/iiop/ServiceContextReader.h \
   core/comm/iiop/ServiceId.h \
   core/comm/iiop/TargetAddress.h \
   core/comm/iiop/UserExceptionEncoder.h \
   core/comm/iiop/Version.h \
   core/comm/iiop.h \
   core/comm/iiop_fw.h \
   core/comm/IIOPCommLayer.h \
   core/comm/LocalCommLayer.h \
   core/comm/Lock.h \
   core/comm/LockList.h \
   core/comm/LockPool.h \
   core/comm/miop/GroupIIOPProfile.h \
   core/comm/miop/GroupInfo.h \
   core/comm/miop/MIOPCorbaloc.h \
   core/comm/miop/MIOPPacketCollection.h \
   core/comm/miop/ProfileMIOP.h \
   core/comm/miop.h \
   core/comm/miop_fw.h \
   core/comm/MIOPCommLayer.h \
   core/comm/MulticastConnection.h \
   core/comm/OpeningLock.h \
   core/comm/RECOVERABLE_COMM_FAILURE.h \
   core/comm/ReliableOnewayThread.h \
   core/comm/ServerListener.h \
   core/comm/SSLConnection.h \
   core/comm/SSLIIOPCommLayer.h \
   core/comm/SSLServerListener.h \
   core/comm/ssliop/SSLComponent.h \
   core/comm/ssliop/SSLIOPCorbaloc.h \
   core/comm/ssliop.h \
   core/comm/ssliop_fw.h \
   core/comm/TCPConnection.h \
   core/comm/UDPConnection.h \
   core/comm/ziop/ZIOPMessage.h \
   core/comm/ziop.h \
   core/comm/ziop_fw.h \
   core/comm.h \
   core/comm_fw.h \
   core/compression/CompressionManagerImpl.h \
   core/compression/CompressorFactoryImpl.h \
   core/compression/CompressorImpl.h \
   core/compression/ZlibCompressorImpl.h \
   core/compression.h \
   core/compression_fw.h \
   core/ConfORB.h \
   core/ContextImpl.h \
   core/ContextListImpl.h \
   core/DomainManagerImpl.h \
   core/EnvironmentImpl.h \
   core/ExceptionListImpl.h \
   core/ForwardRequest.h \
   core/goa/AbstractMIOPRequest.h \
   core/goa/GOAImpl.h \
   core/goa/MIOPRequest.h \
   core/HeartbeatEnabledPolicyImpl.h \
   core/HeartbeatPolicyImpl.h \
   core/iop/IOR.h \
   core/iop/ORBComponent.h \
   core/iop/ProfileMultipleComponents.h \
   core/iop/TAG_ALTERNATE_IIOP_ADDRESS.h \
   core/iop/TAG_FT_HEARTBEAT_ENABLED.h \
   core/iop/TAG_GROUP.h \
   core/iop/TAG_GROUP_IIOP.h \
   core/iop/TAG_INTERNET_IOP.h \
   core/iop/TAG_MULTIPLE_COMPONENTS.h \
   core/iop/TAG_ORB_TYPE.h \
   core/iop/TAG_POLICIES.h \
   core/iop/TAG_UIPMC.h \
   core/iop/TaggedComponent.h \
   core/iop/TaggedComponentReader.h \
   core/iop/TaggedProfile.h \
   core/iop/TaggedProfileReader.h \
   core/iop.h \
   core/iop_fw.h \
   core/LocalServerRequest.h \
   core/messaging/PoliciesComponent.h \
   core/messaging/QoS.h \
   core/messaging/QueueOrderPolicyImpl.h \
   core/messaging/RebindPolicyImpl.h \
   core/messaging/RelativeRequestTimeoutPolicyImpl.h \
   core/messaging/RelativeRoundtripTimeoutPolicyImpl.h \
   core/messaging/RequestEndTimePolicyImpl.h \
   core/messaging/RequestPriorityPolicyImpl.h \
   core/messaging/RequestStartTimePolicyImpl.h \
   core/messaging.h \
   core/messaging_fw.h \
   core/NamedValueImpl.h \
   core/NVListImpl.h \
   core/ObjectDelegateImpl.h \
   core/ObjectImpl.h \
   core/ORBComponent.h \
   core/ORBServices.h \
   core/poa/AbstractIIOPRequest.h \
   core/poa/AbstractLocalRequest.h \
   core/poa/ActiveObjectMap.h \
   core/poa/CompletionWaiter.h \
   core/poa/CurrentImpl.h \
   core/poa/CurrentInfo.h \
   core/poa/ExecThread.h \
   core/poa/IIOPLocateRequest.h \
   core/poa/IIOPRequest.h \
   core/poa/LocalLocateRequest.h \
   core/poa/LocalRequest.h \
   core/poa/OID.h \
   core/poa/POAImpl.h \
   core/poa/POAKey.h \
   core/poa/POAManagerConf.h \
   core/poa/POAManagerConfListener.h \
   core/poa/POAManagerImpl.h \
   core/poa/POAPath.h \
   core/poa/policies/IdAssignmentPolicyImpl.h \
   core/poa/policies/IdUniquenessPolicyImpl.h \
   core/poa/policies/ImplicitActivationPolicyImpl.h \
   core/poa/policies/LifespanPolicyImpl.h \
   core/poa/policies/RequestProcessingPolicyImpl.h \
   core/poa/policies/ServantRetentionPolicyImpl.h \
   core/poa/policies/ThreadPolicyImpl.h \
   core/poa/policies.h \
   core/poa/policies_fw.h \
   core/poa/QueuedRequest.h \
   core/poa/QueueReaderManager.h \
   core/poa/RequestQueue.h \
   core/poa/ServantDelegate.h \
   core/poa/SystemOID.h \
   core/poa/ThreadPool.h \
   core/poa/ThreadStateListener.h \
   core/poa.h \
   core/poa_fw.h \
   core/PolicyContext.h \
   core/PolicyContextManagerImpl.h \
   core/PolicyCurrentImpl.h \
   core/PolicyFactory.h \
   core/PolicyManagerImpl.h \
   core/ProcessingState.h \
   core/RequestCounter.h \
   core/RequestImpl.h \
   core/ServerRequestImpl.h \
   core/ServerRequestStatus.h \
   core/ShutdownThread.h \
   core/TIDORB.h \
   core/security/CSIComponent.h \
   core/security/QOPPolicyImpl.h \
   core/security/EstablishTrustPolicyImpl.h \
   core/security/SecurityManagerImpl.h \
   core/security/SecurityChecker.h \
   core/security/sas/SASManager.h \
   core/security/sas/SASServiceContext.h \
   core/security/sas_fw.h \
   core/security/sas.h \
   core/security_fw.h \
   core/security.h \
   core/typecode/AbstractInterfaceTypeCode.h \
   core/typecode/AliasTypeCode.h \
   core/typecode/ArrayTypeCode.h \
   core/typecode/ComplexTypeCode.h \
   core/typecode/EnumTypeCode.h \
   core/typecode/ExceptionTypeCode.h \
   core/typecode/FixedTypeCode.h \
   core/typecode/LocalInterfaceTypeCode.h \
   core/typecode/NativeTypeCode.h \
   core/typecode/ObjectRefTypeCode.h \
   core/typecode/RecursiveTypeCode.h \
   core/typecode/SequenceTypeCode.h \
   core/typecode/StringTypeCode.h \
   core/typecode/StructTypeCode.h \
   core/typecode/TypeCodeCache.h \
   core/typecode/TypeCodeFactory.h \
   core/typecode/TypeCodeImpl.h \
   core/typecode/TypeCodeMarshaler.h \
   core/typecode/UnionTypeCode.h \
   core/typecode/ValueBoxTypeCode.h \
   core/typecode/ValueTypeCode.h \
   core/typecode/WStringTypeCode.h \
   core/typecode.h \
   core/typecode_fw.h \
   core/util/AnyHolder.h \
   core/util/BooleanHolder.h \
   core/util/CharHolder.h \
   core/util/CORBAException.h \
   core/util/Corbaname.h \
   core/util/Counter.h \
   core/util/Double.h \
   core/util/DoubleHolder.h \
   core/util/exceptions/BAD_CONTEXT_Creator.h \
   core/util/exceptions/BAD_INV_ORDER_Creator.h \
   core/util/exceptions/BAD_OPERATION_Creator.h \
   core/util/exceptions/BAD_PARAM_Creator.h \
   core/util/exceptions/BAD_TYPECODE_Creator.h \
   core/util/exceptions/COMM_FAILURE_Creator.h \
   core/util/exceptions/DATA_CONVERSION_Creator.h \
   core/util/exceptions/FREE_MEM_Creator.h \
   core/util/exceptions/IMP_LIMIT_Creator.h \
   core/util/exceptions/INITIALIZE_Creator.h \
   core/util/exceptions/INTERNAL_Creator.h \
   core/util/exceptions/INTF_REPOS_Creator.h \
   core/util/exceptions/INV_FLAG_Creator.h \
   core/util/exceptions/INV_IDENT_Creator.h \
   core/util/exceptions/INV_OBJREF_Creator.h \
   core/util/exceptions/INV_POLICY_Creator.h \
   core/util/exceptions/INVALID_TRANSACTION_Creator.h \
   core/util/exceptions/MARSHAL_Creator.h \
   core/util/exceptions/NO_IMPLEMENT_Creator.h \
   core/util/exceptions/NO_MEMORY_Creator.h \
   core/util/exceptions/NO_PERMISSION_Creator.h \
   core/util/exceptions/NO_RESOURCES_Creator.h \
   core/util/exceptions/NO_RESPONSE_Creator.h \
   core/util/exceptions/OBJ_ADAPTER_Creator.h \
   core/util/exceptions/OBJECT_NOT_EXIST_Creator.h \
   core/util/exceptions/PERSIST_STORE_Creator.h \
   core/util/exceptions/SystemExceptionCreator.h \
   core/util/exceptions/SystemExceptionEncoder.h \
   core/util/exceptions/SystemExceptionNames.h \
   core/util/exceptions/SystemExceptionType.h \
   core/util/exceptions/TIMEOUT_Creator.h \
   core/util/exceptions/TRANSACTION_REQUIRED_Creator.h \
   core/util/exceptions/TRANSACTION_ROLLEDBACK_Creator.h \
   core/util/exceptions/TRANSIENT_Creator.h \
   core/util/exceptions/UNKNOWN_Creator.h \
   core/util/exceptions.h \
   core/util/FixedHolder.h \
   core/util/Float.h \
   core/util/FloatHolder.h \
   core/util/GenericValue.h \
   core/util/InitialReference.h \
   core/util/Long.h \
   core/util/LongDouble.h \
   core/util/LongDoubleHolder.h \
   core/util/LongHolder.h \
   core/util/LongLong.h \
   core/util/LongLongHolder.h \
   core/util/ObjectHolder.h \
   core/util/Octet.h \
   core/util/OctetHolder.h \
   core/util/OnlyOneThreadCanWait.h \
   core/util/OperationCompletion.h \
   core/util/RemovableObject.h \
   core/util/Short.h \
   core/util/ShortHolder.h \
   core/util/StringHolder.h \
   core/util/SystemExceptionHolder.h \
   core/util/Time.h \
   core/util/TypeCodeHolder.h \
   core/util/ULong.h \
   core/util/ULongHolder.h \
   core/util/ULongLong.h \
   core/util/ULongLongHolder.h \
   core/util/URL.h \
   core/util/UseTable.h \
   core/util/UShort.h \
   core/util/UShortHolder.h \
   core/util/ValueHolder.h \
   core/util/WCharHolder.h \
   core/util/WStringHolder.h \
   core/util.h \
   core/ziop/CompressionEnablingPolicyImpl.h \
   core/ziop/CompressionLowValuePolicyImpl.h \
   core/ziop/CompressionMinRatioPolicyImpl.h \
   core/ziop/CompressorIdLevelListPolicyImpl.h \
   core/ziop/Ziop.h \
   core/ziop.h \
   core/ziop_fw.h

inst_HEADERS = \
   config.h \
   portable.h \
   templates_fw.h \
   templates.h \
   types.h \
   dynAny.h \
   util.h

instdir=$(includedir)/TIDorb
