SUBDIRS = ORB ServiceDetail ServiceInformation TypeCode

if !MINIMUN
SUBDIRS += Contained Container InterfaceDef ValueDef
endif

SUBDIRS += .

# Default includes should be removed since header file String.h
# is clashing with /usr/include/string.h, producing compile erros.
#DEFAULT_INCLUDES =

AM_CPPFLAGS = \
        -I$(top_srcdir)/source/TIDThr/tidthr/include \
        -I$(top_srcdir)/source/TIDSocket/tidsocket/include \
        -I$(top_srcdir)/source/TIDorbC/orb/include \
        -I$(top_builddir)/source/TIDorbC/orb/IDL/01_orb

CLEANFILES = *.C *.h

idl_cpp_headers = \
        ScopedName_ext.h \
        DomainManager_ext.h \
        PolicyCurrent_ext.h \
        DomainManagerList_ext.h \
        DoubleSeq_ext.h \
        ServiceDetail_ext.h \
        CharSeq_ext.h \
        ARG_IN.h \
        PRIVATE_MEMBER.h \
        Identifier.h \
        Flags.h \
        ServiceOption.h \
        ServiceDetailType_ext.h \
        Identifier_ext.h \
        DataInputStream_ext.h \
        PolicyError.h \
        WCharSeq.h \
        RepositoryIdSeq_ext.h \
        BadFixedValue.h \
        _PolicyStub.h \
        DomainManager.h \
        PolicyTypeSeq_ext.h \
        CustomMarshal_ext.h \
        PolicyManager_ext.h \
        VM_ABSTRACT.h \
        ValueMemberSeq.h \
        ValueMember.h \
        ULongLongSeq_ext.h \
        PUBLIC_MEMBER.h \
        ServiceType.h \
        AnySeq_ext.h \
        FloatSeq_ext.h \
        FloatSeq.h \
        ARG_OUT.h \
        Current_ext.h \
        BadFixedValue_ext.h \
        ShortSeq.h \
        WStringSeq.h \
        PolicyType_ext.h \
        _CurrentStub.h \
        WCharSeq_ext.h \
        AnySeq.h \
        Visibility_ext.h \
        LongLongSeq.h \
        PolicyList_ext.h \
        PolicyError_ext.h \
        BooleanSeq_ext.h \
        BAD_POLICY_TYPE.h \
        Flags_ext.h \
        ValueModifier_ext.h \
        Policy.h \
        ValueMemberSeq_ext.h \
        LongLongSeq_ext.h \
        ServiceOption_ext.h \
        StringSeq.h \
        ULongSeq_ext.h \
        CharSeq.h \
        LongSeq_ext.h \
        TypeCode.h \
        DataOutputStream.h \
        PolicyCurrent.h \
        _DomainManagerStub.h \
        ServiceType_ext.h \
        OctetSeq_ext.h \
        ULongLongSeq.h \
        UNSUPPORTED_POLICY_VALUE.h \
        CTX_RESTRICT_SCOPE.h \
        InvalidPolicies.h \
        ServiceInformation.h \
        Visibility.h \
        ORB.h \
        DoubleSeq.h \
        RepositoryId.h \
        ServiceInformation_ext.h \
        SetOverrideType.h \
        BAD_POLICY.h \
        RepositoryIdSeq.h \
        VersionSpec.h \
        BooleanSeq.h \
        ScopedName.h \
        TCKind.h \
        UShortSeq.h \
        BAD_POLICY_VALUE.h \
        RepositoryId_ext.h \
        WStringSeq_ext.h \
        Security.h \
        PolicyErrorCode_ext.h \
        ValueMember_ext.h \
        Current.h \
        ShortSeq_ext.h \
        PolicyList.h \
        InvalidPolicies_ext.h \
        CompletionStatus_ext.h \
        DataInputStream.h \
        PolicyType.h \
        DataOutputStream_ext.h \
        StringSeq_ext.h \
        DomainManagerList.h \
        OctetSeq.h \
        ServiceDetail.h \
        ValueModifier.h \
        LongSeq.h \
        ULongSeq.h \
        VM_NONE.h \
        ServiceDetailType.h \
        ARG_INOUT.h \
        PolicyErrorCode.h \
        ORB_ext.h \
        PolicyTypeSeq.h \
        CustomMarshal.h \
        PolicyManager.h \
        SetOverrideType_ext.h \
        UNSUPPORTED_POLICY.h \
        Policy_ext.h \
        VM_CUSTOM.h \
        TypeCode_ext.h \
        TCKind_ext.h \
        VersionSpec_ext.h \
        VM_TRUNCATABLE.h \
        OMGVMCID.h \
        UShortSeq_ext.h \
        CompletionStatus.h \
        LongDoubleSeq.h \
        LongDoubleSeq_ext.h \
        StructMemberSeq_ext.h \
        StructMemberSeq.h \
        StructMember.h \
        StructMember_ext.h \
        UnionMember_ext.h \
        UnionMemberSeq_ext.h \
        UnionMember.h \
        UnionMemberSeq.h \
        _IRObjectStub.h \
        IRObject_ext.h \
        IRObject.h \
        IDLType.h \
        _IDLTypeStub.h \
        IDLType_ext.h \
        DefinitionKind.h \
        DefinitionKind_ext.h

if !MINIMUN
idl_cpp_headers += \
        ParameterMode.h \
        ParameterMode_ext.h \
        ContextIdentifier.h \
        ContextIdentifier_ext.h \
        OperationMode.h \
        OperationMode_ext.h \
        ContextIdSeq.h \
        ContextIdSeq_ext.h \
        PrimitiveKind.h \
        PrimitiveKind_ext.h \
        AttributeMode.h \
        AttributeMode_ext.h \
        SecConstruction.h \
        ConstructionPolicy_ext.h \
        ConstructionPolicy.h \
        _ConstructionPolicyStub.h \
        Contained.h \
        ContainedSeq_ext.h \
        ContainedSeq.h \
        _ContainedStub.h \
        Contained_ext.h \
        Container.h \
        _ContainerStub.h \
        Container_ext.h \
        _PrimitiveDefStub.h \
        PrimitiveDef.h \
        PrimitiveDef_ext.h \
        WstringDef.h \
        WstringDef_ext.h \
        SequenceDef.h \
        SequenceDef_ext.h \
        ArrayDef.h \
        ArrayDef_ext.h \
        FixedDef.h \
        FixedDef_ext.h \
        StringDef.h \
        _StringDefStub.h \
        StringDef_ext.h \
        Repository.h \
        _RepositoryStub.h \
        Repository_ext.h \
        ModuleDef.h \
        _ModuleDefStub.h \
        ModuleDef_ext.h \
        EnumMemberSeq.h \
        EnumMemberSeq_ext.h \
        ConstantDef_ext.h \
        _ConstantDefStub.h \
        ConstantDef.h \
        _TypedefDefStub.h \
        TypedefDef_ext.h \
        TypedefDef.h \
        ValueBoxDef.h \
        _FixedDefStub.h \
        OperationDef_ext.h \
        _ValueDefStub.h \
        _StructDefStub.h \
        StructDef.h \
        ExceptionDefSeq.h \
        _InterfaceDefStub.h \
        UnionDef_ext.h \
        ValueBoxDef_ext.h \
        _AttributeDefStub.h \
        _NativeDefStub.h \
        ExceptionDef.h \
        StructDef_ext.h \
        _AliasDefStub.h \
        OperationDef.h \
        ValueDefSeq_ext.h \
        _OperationDefStub.h \
        ValueDef.h \
        ValueMemberDef_ext.h \
        _ValueMemberDefStub.h \
        ValueDef_ext.h \
        _ArrayDefStub.h \
        ExceptionDefSeq_ext.h \
        ExceptionDef_ext.h \
        InterfaceDefSeq_ext.h \
        _ValueBoxDefStub.h \
        AliasDef_ext.h \
        NativeDef.h \
        AttributeDef.h \
        InterfaceDef.h \
        ValueMemberDef.h \
        EnumDef_ext.h \
        UnionDef.h \
        _EnumDefStub.h \
        ValueDefSeq.h \
        _ExceptionDefStub.h \
        AttributeDef_ext.h \
        _UnionDefStub.h \
        InterfaceDefSeq.h \
        _SequenceDefStub.h \
        InterfaceDef_ext.h \
        AliasDef.h \
        EnumDef.h \
        AttributeDescription_ext.h \
        AttrDescriptionSeq_ext.h \
        TypeDescription.h \
        ParameterDescription.h \
        ParDescriptionSeq.h \
        OperationDescription_ext.h \
        OperationDescription.h \
        OpDescriptionSeq.h \
        ValueDescription_ext.h \
        InterfaceDescription.h \
        ExcDescriptionSeq_ext.h \
        ValueDescription.h \
        ExceptionDescription.h \
        ExceptionDescription_ext.h \
        InterfaceDescription_ext.h \
        OpDescriptionSeq_ext.h \
        TypeDescription_ext.h \
        ParameterDescription_ext.h \
        AttributeDescription.h \
        ExcDescriptionSeq.h \
        ParDescriptionSeq_ext.h \
        AttrDescriptionSeq.h \
        ModuleDescription.h \
        ModuleDescription_ext.h \
        ConstantDescription.h \
        ConstantDescription_ext.h \
        Initializer_ext.h \
        Initializer.h \
        InitializerSeq_ext.h \
        InitializerSeq.h
endif

idl_cpp_extra_headers = \
        UserException.h \
        NamedValue.h \
        UnknownUserException.h \
        ContextList.h \
        SystemException_ext.h \
        ExceptionList.h \
        ValueBase.h \
        AbstractBase.h \
        String.h \
        sys_excepts.h \
        NVList.h \
        Exception_ext.h \
        Request.h \
        Fixed_ext.h \
        ValueBase_ext.h \
        Environment.h \
        ServerRequest.h \
        basic_types.h \
        Any_ext.h \
        Fixed.h \
        SystemException.h \
        Context.h \
        ValueFactory.h \
        Any.h \
        Exception.h \
        DefaultValueRefCountBase.h \
        LocalObject.h \
        WString.h \
        Object.h

idl_cpp_sources = \
        CompletionStatus.C \
        Identifier.C \
        Flags.C \
        ServiceOption.C \
        PolicyError.C \
        WCharSeq.C \
        BadFixedValue.C \
        _PolicyStub.C \
        DomainManager.C \
        ValueMemberSeq.C \
        StructMemberSeq.C \
        ValueMember.C \
        ServiceType.C \
        FloatSeq.C \
        ShortSeq.C \
        _CurrentStub.C \
        AnySeq.C \
        LongLongSeq.C \
        StringSeq.C \
        CharSeq.C \
        DataOutputStream.C \
        PolicyCurrent.C \
        _DomainManagerStub.C \
        ULongLongSeq.C \
        Policy.C \
        InvalidPolicies.C \
        ServiceInformation.C \
        Visibility.C \
        DoubleSeq.C \
        RepositoryId.C \
        SetOverrideType.C \
        RepositoryIdSeq.C \
        StructMember.C \
        VersionSpec.C \
        BooleanSeq.C \
        ScopedName.C \
        TCKind.C \
        UShortSeq.C \
        Current.C \
        PolicyList.C \
        DataInputStream.C \
        PolicyType.C \
        DomainManagerList.C \
        OctetSeq.C \
        ServiceDetail.C \
        ValueModifier.C \
        LongSeq.C \
        ULongSeq.C \
        ServiceDetailType.C \
        PolicyErrorCode.C \
        PolicyTypeSeq.C \
        CustomMarshal.C \
        PolicyManager.C \
        LongDoubleSeq.C \
        _IRObjectStub.C \
        IRObject.C \
        IDLType.C \
        _IDLTypeStub.C \
        DefinitionKind.C


if !MINIMUN
idl_cpp_sources += \
        ParameterMode.C \
        ContextIdentifier.C \
        OperationMode.C \
        _ConstructionPolicyStub.C \
        ContextIdSeq.C \
        PrimitiveKind.C \
        AttributeMode.C \
        ConstructionPolicy.C \
        ContainedSeq.C \
        _ContainedStub.C \
        Contained.C \
        Container.C \
        _ContainerStub.C \
        _StringDefStub.C \
        StringDef.C \
        SequenceDef.C \
        _SequenceDefStub.C \
        ArrayDef.C \
        _ArrayDefStub.C \
        WStringSeq.C \
        _FixedDefStub.C \
        FixedDef.C \
        Repository.C \
        _RepositoryStub.C \
        ModuleDef.C \
        _ModuleDefStub.C \
        UnionMemberSeq.C \
        UnionMember.C \
        EnumMemberSeq.C \
        ModuleDescription.C \
        _ConstantDefStub.C \
        ConstantDef.C \
        ConstantDescription.C \
        _TypedefDefStub.C \
        TypedefDef.C \
        EnumDef.C \
        ValueBoxDef.C \
        _ValueDefStub.C \
        _PrimitiveDefStub.C \
        _StructDefStub.C \
        StructDef.C \
        ExceptionDefSeq.C \
        _InterfaceDefStub.C \
        WstringDef.C \
        _AttributeDefStub.C \
        _NativeDefStub.C \
        ExceptionDef.C \
        _AliasDefStub.C \
        OperationDef.C \
        _OperationDefStub.C \
        ValueDef.C \
        _ValueMemberDefStub.C \
        _WstringDefStub.C \
        PrimitiveDef.C \
        _ValueBoxDefStub.C \
        NativeDef.C \
        AttributeDef.C \
        InterfaceDef.C \
        ValueMemberDef.C \
        UnionDef.C \
        _EnumDefStub.C \
        ValueDefSeq.C \
        _ExceptionDefStub.C \
        _UnionDefStub.C \
        InterfaceDefSeq.C \
        AliasDef.C \
        TypeDescription.C \
        ParameterDescription.C \
        ParDescriptionSeq.C \
        OperationDescription.C \
        OpDescriptionSeq.C \
        InterfaceDescription.C \
        ValueDescription.C \
        ExceptionDescription.C \
        AttributeDescription.C \
        ExcDescriptionSeq.C \
        AttrDescriptionSeq.C \
        Initializer.C \
        InitializerSeq.C
endif

instdir=$(includedir)/CORBA

inst_HEADERS = \
        $(idl_cpp_headers) $(idl_cpp_extra_headers)

noinst_LTLIBRARIES = libTIDorbIdl_orb_CORBA.la

libTIDorbIdl_orb_CORBA_la_SOURCES = $(idl_cpp_headers) $(idl_cpp_sources)

libTIDorbIdl_orb_CORBA_la_LIBADD = \
        ORB/libTIDorbIdl_orb_CORBA_ORB.la \
        ServiceDetail/libTIDorbIdl_orb_CORBA_ServiceDetail.la \
        ServiceInformation/libTIDorbIdl_orb_CORBA_ServiceInformation.la \
        TypeCode/libTIDorbIdl_orb_CORBA_TypeCode.la

if !MINIMUN
libTIDorbIdl_orb_CORBA_la_LIBADD += \
        Contained/libTIDorbIdl_orb_CORBA_Contained.la \
        Container/libTIDorbIdl_orb_CORBA_Container.la \
        InterfaceDef/libTIDorbIdl_orb_CORBA_InterfaceDef.la \
        ValueDef/libTIDorbIdl_orb_CORBA_ValueDef.la 

endif
