
inst_HEADERS = \
   DynAnyBase.h \
   DynAnyFactoryImpl.h \
   DynAnyImpl.h \
   DynEnumImpl.h \
   DynExceptImpl.h \
   DynFixedImpl.h \
   DynSequenceImpl.h \
   DynSingleton.h \
   DynUnionImpl.h \
   DynValueImpl.h \
   DynArrayImpl.h \
   DynComposite.h \
   DynStructImpl.h

instdir=$(includedir)/TIDorb/dynAny
