
headers = \
	FixedSizeT_var.h \
	InterfaceT_out.h \
	InterfaceT_ptr_SequenceMember.h \
	InterfaceT_var.h \
	RefCount_out.h \
	RefCount_var.h \
	SequenceT_out.h \
	SequenceT_var.h \
	ValuetypeT_out.h \
	ValuetypeT_ptr_SequenceMember.h \
	ValuetypeT_var.h \
	VariableSizeT_out.h \
	VariableSizeT_var.h

inst_HEADERS = $(headers)

instdir=$(includedir)/TIDorb/templates
